added color for small tag in mainLayout.css and also added inital note to is xlib bright article

--- a/text/mainLayout.css
+++ b/text/mainLayout.css
@@ -239,6 +239,11 @@ strong, h2, h3, h4, h5, h6
     color: #ff0084;
     text-shadow: 1px 1px #03004D;
 }
+
+small
+{
+    color: #D4C895;
+}
 /*<{ paragraphs, text, etc... }>------------------------------------------------------------------------*/
 
 /*<{ main content area of page }>-----------------------------------------------------------------------*/
