fixed some spelling errors in the article and also added special color to em tag in mainLayout.css also added a lot of em's. idk maybe too many haha

--- a/text/mainLayout.css
+++ b/text/mainLayout.css
@@ -244,6 +244,14 @@ small
 {
     color: #D4C895;
 }
+
+em
+{
+    /* color: #664413; */
+    /* color: #ff438e; */
+    /* color: #ff3389; */
+    color: #2b0017;
+}
 /*<{ paragraphs, text, etc... }>------------------------------------------------------------------------*/
 
 /*<{ main content area of page }>-----------------------------------------------------------------------*/
