--- a/text/mainLayout.css
+++ b/text/mainLayout.css
@@ -46,13 +46,18 @@ body
     min-width: 220px;
     max-width: 220px;
     min-height: 124px;
-    /*    background-color: #FFD1E2;*/
+    /* Theme 1.0 color */
+    /* background-color: #FFD1E2; */
+    /* Theme 1.1 color */
     background-color: #FFDBE8;
 }
 
 .column.LR.main_page
 {
-    background-color: #d3f6fd;    
+    /* Theme 1.0 color */
+    /* background-color: #d3f6fd; */
+    /* Theme 1.1 color */
+    background-color: #FFDBE8;
 }
 
 .column.l
@@ -77,8 +82,11 @@ body
     min-height: calc(100% - 250px);
     padding-top: 1px;
     padding-bottom: 1px;
-    background-color: inherit;    
-    background-image: url("media/border/grid_2_left.png");
+    background-color: inherit;
+    /* Theme 1.0 background */
+    /* background-image: url("media/border/grid_2_left.png"); */
+    /* Theme 1.1 background */
+    background-image: url("media/border/grid_2_left.png"), url("media/border/bg_gif_overlay.png"), url("media/border/bg_l.gif");
 }
 
 .column.left_bottom
@@ -101,7 +109,10 @@ body
     padding-top: 1px;
     padding-bottom: 1px;
     background-color: inherit;
+    /* Theme 1.0 background */
     background-image: url("media/border/grid_2_right.png");
+    /* Theme 1.1 background */
+    background-image: url("media/border/grid_2_right.png"), url("media/border/bg_gif_overlay.png"), url("media/border/bg_r.gif");
 }
 
 .column.right_bottom
@@ -128,7 +139,10 @@ footer
 /*<{ Nice shadow effects }>---------------------------------------------------------------*/
 .inset_shadow
 {
-    box-shadow: inset 0 0 15px #c40e00;    
+    /* Theme 1.0 color */
+    /* box-shadow: inset 0 0 15px #c40e00; */
+    /* Theme 1.1 color */
+    box-shadow: inset 0 0 15px #bf19e3;
 }
 /*<{ Nice shadow effects }>---------------------------------------------------------------*/
 
@@ -165,12 +179,18 @@ footer
 .menu_element.l
 {
     text-align: right;
-    box-shadow:  -2px 0px 0px 0px #ce3c61, 0 3px 3px 0px #c40e00,  0 -3px 3px 0px #c40e00;
+    /* Theme 1.0 color */
+    /* box-shadow:  -2px 0px 0px 0px #ce3c61, 0 3px 3px 0px #c40e00,  0 -3px 3px 0px #c40e00; */
+    /* Theme 1.1 color */
+    box-shadow:  -2px 0px 0px 0px #ce3cb7, 0 3px 3px 0px #ce3cb7,  0 -3px 3px 0px #ce3cb7;
 }
 .menu_element.r
 {
     text-align: left;
-    box-shadow:  4px 0px 0px 0px #ce3c61, 1px 3px 3px 0px #c40e00,  1px -3px 3px 0px #c40e00;
+    /* Theme 1.0 color */
+    /* box-shadow:  4px 0px 0px 0px #ce3c61, 1px 3px 3px 0px #c40e00,  1px -3px 3px 0px #c40e00; */
+    /* Theme 1.1 color */
+    box-shadow:  4px 0px 0px 0px #ce3cb7, 1px 3px 3px 0px #ce3cb7,  1px -3px 3px 0px #ce3cb7;
 }
 
 .menu_element:hover
@@ -226,7 +246,10 @@ p
     font-style: italic;
     font-family: serif;
     font-size: 0.92em;
-    color: #03004D;
+    /* Theme 1.0 color */
+    /* color: #03004D; */
+    /* Theme 1.1 color */
+    color: #0b0887;
     font-weight: normal;
     text-shadow: none;
     word-break: break-word;
@@ -244,7 +267,10 @@ article
 
 strong, h2, h3, h4, h5, h6
 {
-    color: #ff0084;
+    /* Theme 1.0 color */
+    /* color: #ff0084; */
+    /* Theme 1.1 color */
+    color: #ff01fc;
     text-shadow: 1px 1px #03004D;
 }
 
@@ -268,8 +294,12 @@ main
     order: 2;
     width: 100%;
     border: 0px;
-    border-top: 5px solid #ce3c61;
-    border-bottom: 5px solid #ce3c61;
+    /* There 1.0 color */
+    /* border-top: 5px solid #ce3c61;
+    border-bottom: 5px solid #ce3c61; */
+    /* There 1.1 color */
+    border-top: 5px solid #ce3cb7;
+    border-bottom: 5px solid #ce3cb7;
     padding: 20px;
     padding-top: 0px;
     background-color: #FFFCE8;
@@ -291,8 +321,12 @@ If you don't do this the corners will be cut off :'(	*/
     max-height: 60px;
     margin: 0 auto;
     border-radius: 160px / 30px;
-    background: #000084;
-    box-shadow: inset 0 0 25px #c40e00;
+    /* Theme 1.0 color */
+    /* background: #000084;
+    box-shadow: inset 0 0 25px #c40e00; */
+    /* Theme 1.1 color */
+    box-shadow: inset 0 0 25px #e90927;
+    background: #050594;
 }
 
 #main_tag_in_main_min_height
@@ -303,8 +337,12 @@ bottom of the page when you make the window very small.*/
 
 h1
 {
-    color: cyan;
-    text-shadow: 2px 2px #ef1000;
+    /* Theme 1.0 color */
+    /* color: cyan;
+    text-shadow: 2px 2px #ef1000; */
+    /* Theme 1.1 color */
+    color: #01fcff;
+    text-shadow: 2px 2px #f01100;
     font-family: Typographytimes;    
 }
 
@@ -324,8 +362,12 @@ h1.oval
     max-height: 32px;
     margin: 0 auto;
     border-radius: 25px;
-    background: #ff7698;
-    box-shadow:  0 0 15px #c40e00;
+    /* Theme 1.0 color */
+    /* background: #ff7698;
+    box-shadow:  0 0 15px #c40e00; */
+    /* Theme 1.1 color */
+    background: #fe78fa;
+    box-shadow:  0 0 15px #dc6af4;
 }
 
 #to_top_of_page:hover
@@ -580,7 +622,10 @@ img
     margin: 0px;
     margin-bottom: 10px;
     /* border: 13px solid #FFDBE8; */
-    box-shadow: 0 0 15px #c40e00;    
+    /* Theme 1.0 color */
+    box-shadow: 0 0 15px #c40e00;
+    /* Theme 1.1 color */
+    box-shadow: 0 0 15px #bf19e3;
 }
 
 img.margin-top
@@ -615,16 +660,25 @@ code
     margin: 0px;
     /* margin-bottom: 12px; */
     /* border: 13px solid #FFDBE8; */
-    box-shadow: 0 0 15px #c40e00;
+    /* Theme 1.0 color */
+    /* box-shadow: 0 0 15px #c40e00; */
+    /* Theme 1.1 color */
+    box-shadow: 0 0 15px #bf19e3;
     text-align: left;
 }
 
 ::selection			/* Change colour of selected text. */
 {
-  background: #fdd4dc; /* WebKit/Blink Browsers */
+    /* Theme 1.0 color */
+    /*  background: #fdd4dc; *//* WebKit/Blink Browsers */
+    /* Theme 1.1 color */
+    background: #ff4a0a;
 }
 ::-moz-selection
 {
-  background: #fdd4dc; /* Gecko Browsers */
+    /* Theme 1.0 color */
+    /* background: #fdd4dc; */ /* Gecko Browsers */
+    /* Theme 1.1 color */
+    background: #ff4a0a;
 }
 /*<{ misc }>--------------------------------------------------------------------------------------------*/
