--- a/text/mainLayout.css
+++ b/text/mainLayout.css
@@ -1,6 +1,6 @@
-/*<{ A nice free font :^) }>--------------------------------------------------------------*/
-/*<{ https://fontlibrary.org/en/font/typography-times }>----------------------------------*/
-/*<{ "License Freeware" }>----------------------------------------------------------------*/
+/* <{ A nice free font :^) }>-------------------------------------------------------------- */
+/* <{ https://fontlibrary.org/en/font/typography-times }>---------------------------------- */
+/* <{ "License Freeware" }>---------------------------------------------------------------- */
 @media print
 {
     aside#debug
@@ -14,12 +14,12 @@
     font-family: Typographytimes;
     src: local("Typographytimes"),
     local("Typographytimes"),
-    url("TypographyTimes.ttf");/*this must be changed but it won't work from the media folder
+    url("TypographyTimes.ttf");/* This must be changed but it won't work from the media folder
 				 with the following directory path for some reason "../media/TypographyTimes.ttf" */
     font-weight: bold;
 }
 
-/*<{ setting up the overal format and property's of the layout }>-------------------------*/
+/* <{ setting up the overal format and property's of the layout }>------------------------- */
 body
 {
     margin: 0px;
@@ -32,9 +32,9 @@ body
 {
     display: flex;
 }
-/*<{ setting up the overal format and property's of the layout }>-------------------------*/
+/* <{ setting up the overal format and property's of the layout }>------------------------- */
 
-/*<{ boarder stuff mostly }>--------------------------------------------------------------*/
+/* <{ boarder stuff mostly }>-------------------------------------------------------------- */
 .column
 {
     word-wrap: break-word;
@@ -131,12 +131,12 @@ body
 }
 
 footer
-{/*value must be vh and not %  !!!*/
-    min-height: calc(100vh - 110px)
+{/* Value must be vh and not %  !!! */
+    min-height: calc(100vh - 110px);
 }
-/*<{ boarder stuff mostly }>--------------------------------------------------------------*/
+/* <{ boarder stuff mostly }>-------------------------------------------------------------- */
 
-/*<{ Nice shadow effects }>---------------------------------------------------------------*/
+/* <{ Nice shadow effects }>--------------------------------------------------------------- */
 .inset_shadow
 {
     /* Theme 1.0 color */
@@ -144,9 +144,9 @@ footer
     /* Theme 1.1 color */
     box-shadow: inset 0 0 15px #bf19e3;
 }
-/*<{ Nice shadow effects }>---------------------------------------------------------------*/
+/* <{ Nice shadow effects }>--------------------------------------------------------------- */
 
-/*<{ nav menu }>--------------------------------------------------------------------------*/
+/* <{ nav menu }>-------------------------------------------------------------------------- */
 .menu_list
 {
     list-style: none;
@@ -161,7 +161,7 @@ footer
 {
     margin-right: 14px;
     padding-right: 0px;
-    padding-left: 0px;/*I think a non-zero padding value is being inherited when this is used in tools.php*/
+    padding-left: 0px; / *I think a non-zero padding value is being inherited when this is used in tools.php */
 }
 .menu_element
 {
@@ -212,13 +212,14 @@ footer
 {
     background-image: url("media/menu_item/menu_item_current_page_highlited.png");
 }
-/*<{ nav menu }>--------------------------------------------------------------------------*/
+/* <{ nav menu }>-------------------------------------------------------------------------- */
 
-/*<{ links }>-----------------------------------------------------------------------------*/
+/* <{ links }>----------------------------------------------------------------------------- */
 .a_gui_element:visited		/* used to have GUI element's (such as the menu buttons not change colour when visited like other links.) */
 {
     color: #6bfdff;
 }
+
 a, span.link	   /* link color when not hovering, focus or active */
 {
     color: #6bfdff;
@@ -238,9 +239,9 @@ a:hover, a:focus, a:active, a:visited:hover, a:visited:focus, a:visited:active
 {
     text-shadow: 1px 1px purple;
 }
-/*<{ links }>-----------------------------------------------------------------------------*/
+/* <{ links }>----------------------------------------------------------------------------- */
 
-/*<{ paragraphs, text, etc... }>------------------------------------------------------------------------*/
+/* <{ paragraphs, text, etc... }>------------------------------------------------------------------------ */
 p
 {
     font-style: italic;
@@ -257,10 +258,11 @@ p
 
 article
 {
-    max-width: 1300px;
+    max-width: 1920px;
+    /*    text-align: center;*/
     margin: 0 auto;
     margin-bottom: 16px;
-    /*    text-align: center;*/
+    padding: 20px;
     text-align: left;
     word-break: break-word;
 }
@@ -286,9 +288,9 @@ em
     /* color: #ff3389; */
     color: #2b0017;
 }
-/*<{ paragraphs, text, etc... }>------------------------------------------------------------------------*/
+/* <{ paragraphs, text, etc... }>------------------------------------------------------------------------ */
 
-/*<{ main content area of page }>-----------------------------------------------------------------------*/
+/* <{ main content area of page }>----------------------------------------------------------------------- */
 main
 {
     order: 2;
@@ -300,22 +302,26 @@ main
     /* There 1.1 color */
     border-top: 5px solid #ce3cb7;
     border-bottom: 5px solid #ce3cb7;
-    padding: 20px;
-    padding-top: 0px;
     background-color: #FFFCE8;
-    /*the value here must be vh and not % otherwise this property will not work for some reason :'(.*/ 
+
+    padding-bottom: -10px;
+    /* the value here must be vh and not % otherwise this property will not work for some reason :'(. */ 
 }
 
 #position_main_part_of_main
-{/*this help's the get top of page button to work how I wan't. It's still not perfect thought :'(   */
-    min-height: calc(100vh - 163px);/*I had a lot of trouble figureing out that this was the issue*/
+{
+    min-height: 422px;		/* Minimum height of the side bars (not including top and bottom boarders. */
+    height: calc(100vh - 90px);
+    min-width: 360px;
+    width: calc(100vw - 440px);
+    padding: 0px;
+    overflow: auto;
 }
 
 .heading_oval
-{/*note (very important!) the radius must be half of the length and width, to which is added the padding value.
+{/* note (very important!) the radius must be half of the length and width, to which is added the padding value.
 S0 width: 350px; and padding: 0px; would be (350/2) +0  = 175, and height: 60px; and padding 0px; would be (60/2) +0 =30px!
 If you don't do this the corners will be cut off :'(	*/
-    text-align: center;
     width: 320px;
     height: 60px;
     max-height: 60px;
@@ -330,8 +336,8 @@ If you don't do this the corners will be cut off :'(	*/
 }
 
 #main_tag_in_main_min_height
-{/*the purpose of this is to make sure that the "To Top of Page" button is always RIGHT at the
-bottom of the page when you make the window very small.*/
+{/* the purpose of this is to make sure that the "To Top of Page" button is always RIGHT at the
+bottom of the page when you make the window very small. */
     min-height: 288px;
 }
 
@@ -343,12 +349,15 @@ h1
     /* Theme 1.1 color */
     color: #01fcff;
     text-shadow: 2px 2px #f01100;
-    font-family: Typographytimes;    
+    font-family: Typographytimes;
 }
 
 h1.oval
 {
+    text-align: center;
     padding-top: 16px;
+    margin: 0px;
+    font-size: 2.1739em;	/* Default size of h1 is 2em. Font is scailed down by 0.92 by inheritance. 2 * (1 / 0.92) = ~2.1739 */
 }
 
 #to_top_of_page
@@ -361,6 +370,8 @@ h1.oval
     height: 60px;
     max-height: 32px;
     margin: 0 auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
     border-radius: 25px;
     /* Theme 1.0 color */
     /* background: #ff7698;
@@ -386,9 +397,9 @@ h1.oval
     margin: 0 auto;
     max-width: 210px;
 }
-/*<{ main content area of page }>-----------------------------------------------------------------------*/
+/* <{ main content area of page }>----------------------------------------------------------------------- */
 
-/*<{ misc }>--------------------------------------------------------------------------------------------*/
+/* <{ misc }>-------------------------------------------------------------------------------------------- */
 ul
 {
     list-style: square inside url("media/bullet_point.png");
@@ -467,12 +478,12 @@ td.v_align_top
 
 td.no_display
 {
-	    display: none;
+    display: none;
 }
 
 th.no_display
 {
-	    display: none;
+    display: none;
 }
 
 th.some_pad
@@ -646,7 +657,7 @@ img.margin-left
 pre
 {
 
-   /* min-width: 320px;*/
+    /* min-width: 320px;*/
     /*    max-width: 39vw;*/
     /*      min-height: calc(100% - 250px);*/
     min-width: calc(100%);
@@ -681,4 +692,4 @@ code
     /* Theme 1.1 color */
     background: #ff4a0a;
 }
-/*<{ misc }>--------------------------------------------------------------------------------------------*/
+/* <{ misc }>-------------------------------------------------------------------------------------------- */
