We have done a small amount more work on our new article

--- a/text/mainLayout.css
+++ b/text/mainLayout.css
@@ -288,6 +288,11 @@ em
     /* color: #ff3389; */
     color: #2b0017;
 }
+
+.refernce
+{
+    color: #ff01fc;
+}
 /* <{ paragraphs, text, etc... }>------------------------------------------------------------------------ */
 
 /* <{ main content area of page }>----------------------------------------------------------------------- */
