--- a/text/mainLayout.css
+++ b/text/mainLayout.css
@@ -425,7 +425,11 @@ li
     font-style: italic;
     font-family: serif;
     font-size: 0.92em;
-    color: #03004D;    
+    font-weight: normal;
+    text-shadow: none;
+    word-break: break-word;
+    /*    color: #03004D;*/
+    color: #0b0887;
 }
 
 table
